--- a/vignettes/_sporeg_workflow.Rmd
+++ b/vignettes/_sporeg_workflow.Rmd
@@ -995,6 +995,8 @@ What are the characteristics of the grid cells that exhibited a good fit?
 #| warning: false
 #| include: true
 
+res <- load(system.file("extdata", "res.Rda", package = "sporeg"))
+
 gd_fit_char <- lapply(res, gd_fts)
 
 gd_fit_char <- data.table::rbindlist(., idcol = 'resolution') %>%
