--- a/vignettes/_sporeg_workflow.Rmd
+++ b/vignettes/_sporeg_workflow.Rmd
@@ -50,11 +50,6 @@ library(dplyr)
 library(sf)
 library(sp)
 library(pathroutr) 
-
-# To install pathroutr, use the following code: 
-# install.packages("remotes") # If necessary, install remotes package first using: 
-# remotes::install_github("jmlondon/pathroutr") 
-
 library(parallel)
 library(geosphere)
 library(mapview)
@@ -269,9 +264,6 @@ We should now have everything in place to iterate our methods. Here, we are usin
 
 base::replicate(n = reps, expr = {
     
-    # Clear cache
-    gc()
-    
     iterated_results <- parallel::parLapply(cl, runs, fun = function(I) {
       
       # Simulate tracks 
@@ -291,10 +283,7 @@ base::replicate(n = reps, expr = {
     
     # Overwrite the results with both the new and previous results combined
     save(results, file = system.file("extdata", filename, package = "sporeg"))
-    
-    # Clear cache
-    gc()
-    
+   
     return(df)
   }
   )
@@ -708,9 +697,6 @@ HS_100km_grid <- depth_data(HS_100km_grid, depth_data)
 HS_50km_grid <- depth_data(HS_50km_grid, depth_data)
 HS_25km_grid <- depth_data(HS_25km_grid, depth_data)
 HS_10km_grid <- depth_data(HS_10km_grid, depth_data)
-
-rm(depth)
-gc()
 ```
 
 Calculate distance to shore, density of receivers, presence/absence of receivers, and merge with grid cell depth data. We can do all of this using the false origin shapefiles.
@@ -995,11 +981,8 @@ What are the characteristics of the grid cells that exhibited a good fit?
 #| warning: false
 #| include: true
 
-res <- load(system.file("extdata", "res.Rda", package = "sporeg"))
-
-gd_fit_char <- lapply(res, gd_fts)
-
-gd_fit_char <- data.table::rbindlist(., idcol = 'resolution') %>%
+gd_fit_char <- lapply(res, gd_fts) %>% 
+  data.table::rbindlist(., idcol = 'resolution') %>%
   left_join(tibble(resolution = 1:4, 
                    res_name = c("100km", "50km", "25km", "10km")), 
             by = "resolution") %>%
@@ -1016,9 +999,8 @@ Let's find out how many of the good fits occurred in grid cells that lacked rece
 #| warning: false
 #| include: true
 
-clsd_gps <- lapply(res, gps_fld)
-
-clsd_gps <-  data.table::rbindlist(., idcol = 'resolution') %>%
+clsd_gps <- lapply(res, gps_fld) %>% 
+  data.table::rbindlist(., idcol = 'resolution') %>%
   left_join(tibble(resolution = 1:4, 
                    res_name = c("100km", "50km", "25km", "10km")), 
             by = "resolution") %>%
@@ -1034,9 +1016,8 @@ Let's find out where these closed gaps are located (e.g., are they coastal?).
 #| warning: false
 #| include: true
 
-clsd_gp_chars <- lapply(res, gps_chr)
-
-clsd_gp_chars <- data.table::rbindlist(., idcol = 'resolution') %>%
+clsd_gp_chars <- lapply(res, gps_chr) %>%
+  data.table::rbindlist(., idcol = 'resolution') %>%
   left_join(tibble(resolution = 1:4, 
                    res_name = c("100km", "50km", "25km", "10km")), 
             by = "resolution") %>%
@@ -1052,9 +1033,8 @@ Let's find out where most of the receivers are in the current array.
 #| warning: false
 #| include: true
 
-rcv_chars <- lapply(res, rcv_chr)
-
-rcv_chars <- data.table::rbindlist(., idcol = 'resolution') %>%
+rcv_chars <- lapply(res, rcv_chr) %>%
+  data.table::rbindlist(., idcol = 'resolution') %>%
   left_join(tibble(resolution = 1:4, 
                    res_name = c("100km", "50km", "25km", "10km")), 
             by = "resolution") %>%
@@ -1073,9 +1053,8 @@ Blacktip sharks, the species chosen to demonstrate the current methods, is known
 
 depth_limit <- 300 # [m]
 
-dif_depth <- lapply(res, dif_co)
-
-dif_depth <- data.table::rbindlist(., idcol = 'resolution') %>%
+dif_depth <- lapply(res, dif_co) %>%
+  data.table::rbindlist(., idcol = 'resolution') %>%
   left_join(tibble(resolution = 1:4, 
                    res_name = c("100km", "50km", "25km", "10km")), 
             by = "resolution") %>%
