update self sabotage false includes

--- a/vignettes/sporeg_workflow.Rmd
+++ b/vignettes/sporeg_workflow.Rmd
@@ -35,7 +35,7 @@ And clearing any cache we may have remaining from previous work.
 
 ```{r}
 #| label: Clear-cache
-#| include: false
+#| include: true
 
 gc()
 ```
@@ -44,7 +44,7 @@ Next, let's load the packages that we will need to run the steps in this vignett
 
 ```{r}
 #| label: load-packages
-#| include: false
+#| include: true
 
 library(sporeg)
 library(dplyr)
@@ -86,7 +86,7 @@ Make the different resolution grid cells and put them all in a list.
 
 ```{r}
 #| label: grids
-#| include: false
+#| include: true
 
 HS_10km_grid <- grid_res(10, study_site, 3857, what = "polygons")
 HS_25km_grid <- grid_res(25, study_site, 3857, what = "polygons")
@@ -114,7 +114,7 @@ Get the land barrier.
 
 ```{r}
 #| label: land-barrier
-#| include: false
+#| include: true
 
 load(system.file("extdata", "land_barrier.Rda", 
                             package = "sporeg")) 
@@ -443,7 +443,7 @@ If we ran too many iterations, we can filter for the number required for each it
 
 ```{r}
 #| label: results-summary
-#| include: false
+#| include: true
 new_df <- df_var %>%
   dplyr::filter(res_name == "100km" & iteration <= 119 |
                   res_name == "50km" & iteration <= 128 |
@@ -513,7 +513,7 @@ We had a problem in the track reconstruction where some iterations did not recon
 ```{r}
 #| label: recon-info
 #| warning: false
-#| include: false
+#| include: true
 
 recon <- df_var %>%
   group_by(res_name, iteration) %>%
@@ -536,7 +536,7 @@ Because some tracks were not re-constructed by the movement model, we may have i
 ```{r}
 #| label: recon-results
 #| warning: false
-#| include: false
+#| include: true
 
 recon_res <- df_var %>%
   group_by(res_name, iteration) %>%
@@ -552,7 +552,7 @@ Let's re-number these iterations where all `anims` were re-constructed.
 ```{r}
 #| label: new-iterations
 #| warning: false
-#| include: false
+#| include: true
 
 new_iters <- df_var %>%
   group_by(res_name, iteration) %>%
@@ -568,7 +568,7 @@ Now we can see how our results would change if we had selected only iterations i
 ```{r}
 #| label: new-results
 #| warning: false
-#| include: false
+#| include: true
 
 new_iters_df <- merge(new_iters, df_var) %>%
   dplyr::filter(res_name == "100km" & new_iter <= 119 |
@@ -613,7 +613,7 @@ First, let's gather information on the depth in each grid cell. For this example
 
 ```{r}
 #| label: get-bbox
-#| include: false
+#| include: true
 
 # Objects required for iterations to run
 load(system.file("extdata", "site_depth.Rda", package = "sporeg")) 
@@ -849,7 +849,7 @@ car::vif(vif.fit)
 ```{r}
 #| label: model-selection
 #| warning: false
-#| include: false
+#| include: true
 
 # 100 x 100km resolution
 fit1.100km <- glm(formula = g_fit ~ den_rcs + p_a + mean_depth + d_shore,
@@ -904,7 +904,7 @@ Now that we've constructed the model using backward selection by p-value, let's 
 ```{r}
 #| label: model-usefulness
 #| warning: false
-#| include: false
+#| include: true
 
 summary(fit2.100km)
 
@@ -1067,7 +1067,7 @@ Let's apply these methods to real acoustic telemetry data so we can derive distr
 ```{r}
 #| label: eco-app
 #| warning: false
-#| include: false
+#| include: true
 
 load(system.file("extdata", "demo_dets.Rda", package = "sporeg"))
 
@@ -1171,7 +1171,7 @@ What if we connected those data with straight lines?
 ```{r}
 #| label: straight-line
 #| warning: false
-#| include: false
+#| include: true
 
 load(system.file("extdata", "at_dly_locs.Rda", package = "sporeg"))
 
